--- a/8-Kong/docker-compose.yml
+++ b/8-Kong/docker-compose.yml
@@ -7,7 +7,7 @@ networks:
 services:
   # PostgreSQL Database สำหรับ Kong
   kong-database:
-    image: postgres:13
+    image: postgres:11
     container_name: kong-database
     restart: unless-stopped
     environment:
@@ -20,6 +20,25 @@ services:
       - kong-net
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U kong"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  # PostgreSQL Database สำหรับ Konga (แยกจาก Kong)
+  konga-database:
+    image: postgres:11
+    container_name: konga-database
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: konga
+      POSTGRES_PASSWORD: kongapass
+      POSTGRES_DB: konga
+    volumes:
+      - konga_data:/var/lib/postgresql/data
+    networks:
+      - kong-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U konga"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -87,7 +106,7 @@ services:
     restart: unless-stopped
     environment:
       DB_ADAPTER: postgres
-      DB_URI: postgresql://kong:kongpass@kong-database:5432/kong
+      DB_URI: postgresql://konga:kongapass@konga-database:5432/konga
       NODE_ENV: production
       KONGA_HOOK_TIMEOUT: 120000
     ports:
@@ -95,11 +114,13 @@ services:
     networks:
       - kong-net
     depends_on:
-      kong-database:
+      konga-database:
         condition: service_healthy
       kong:
         condition: service_healthy
 
 volumes:
   kong_data:
+    driver: local
+  konga_data:
     driver: local
